--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ certifi==2020.12.5
 cffi==1.14.5
 chardet==3.0.4
 Click==7.0
-colorama==0.4.3
+
 command-not-found==0.3
 cryptography==2.8
 cssselect2==0.4.1
@@ -132,3 +132,10 @@ Werkzeug==0.16.0
 whitenoise==5.2.0
 wrapt==1.12.1
 xkit==0.0.0
+colorama==0.4.3
+apturl==0.5.2
+
+
+
+
+
